fixed contrast issues on projects page

--- a/css/style.css
+++ b/css/style.css
@@ -105,10 +105,13 @@ ul {
 }
 
 .project-date {
-    color: #777;
+    color: blue;
     font-size: 13px;
     display: inline-block;
     padding-left: 5px;
+}
+.label {
+  background-color: blue;
 }
 
 .project-image {
